--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,9 @@
             <li class="nav-item">
                 <a class="nav-link {% if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="{{ path('property.index') }}">Acheter</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link {% if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="{{ path('admin.property.index') }}">Admin</a>
+            </li>
         </ul>
     </div>
 </nav>
